--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
 }
 
 .header {
-    background-image: url(assets/x-mas.png);
+    background-image: url(assets/x-mas-lowpacity.png);
     background-position: center top;
     background-repeat: no-repeat;
     background-size: cover;
@@ -130,7 +130,7 @@ body {
 
 .dir p{
     font-size: 22px;
-    color: #adb456;
+    color: #d7f8e4;
     text-transform: uppercase;
 }
 
@@ -140,7 +140,7 @@ body {
 
 .welcome-1 {
     background-image: url(assets/birdcross.png);
-    position: relative;
+    position: inherit;
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -150,7 +150,7 @@ body {
 .welcome-2 {
     width: 50%;
     padding: 150px 250px 150px 100px;
-    background-color: #adb456;
+    background-color: #6c7037;
 }
 
 h2 {
@@ -163,13 +163,15 @@ h2 {
 }
 
 p {
-    font-size: 16px;
-    color: beige;
+    font-size: 20px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 
+    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: rgb(220, 245, 223);
     margin: 25px 0;
 }
 
 .b1 {
-    color: #90d199;
+    color: #e5ebe6;
 }
 
 .services {
@@ -298,11 +300,11 @@ td {
 }
 
 .personal-1 a{
-    color: #390d0a;
+    color: #d1e02a;
 }
 
 .footer-bg {
-    background-image: url(assets/contact\ us.png);
+    background-image: url(assets/contact-us-lowpacity.png);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
